--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,6 +5,7 @@
 
 	// Set *default* container specific settings.json values on container create.
 	"settings": { 
+		"editor.tabSize": 4,
 		"terminal.integrated.shell.linux": "/bin/bash",
 		"lldb.executable": "/usr/bin/lldb"
 	},
